wrapped in anchor tags, FIXES: second page button, aside container date, default text color, inline css removed, right margin of main box second page fixed

--- a/assets/style/styles.scss
+++ b/assets/style/styles.scss
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@100;400;500;600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 @mixin font-size($size) {
   font-size: $size;
 }
@@ -28,6 +33,9 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  color: #212121;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 header {
@@ -120,7 +128,7 @@ header {
   position: relative;
   // width: 1920px;
   padding-bottom: 67px;
-  background-image: url(assets/images/bg_copy_2.jpg);
+  background-image: url(/assets/images/bg_copy_2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -186,6 +194,10 @@ header {
         // margin-right: 25px;
         @include font-size(14px);
         font-weight: 600;
+
+        #components {
+          padding-left: 3px;
+        }
 
         i {
           margin-right: 28px;
@@ -267,7 +279,7 @@ header {
 
     .username {
       margin-top: 12px;
-      color: #dbdbdb;
+      color: #ffffff;
       font-size: 14px;
       // word-spacing: 1px;
       letter-spacing: 0.5px;
@@ -279,7 +291,7 @@ header {
       @include flex(row);
       font-size: calc(9.5px * 1.25);
       font-weight: 600;
-      color: #6d6c6d;
+      color: #9c9c9c;
       letter-spacing: calc(0.5px * 1.25);
       margin-bottom: 35px;
 
@@ -307,6 +319,7 @@ header {
 
       .comment-container {
         @include flex(row);
+        color: #bdbdbd;
         margin-right: 28px;
         img {
           margin-right: 7px;
@@ -315,6 +328,7 @@ header {
 
       .like-container {
         @include flex(row);
+        color: #bdbdbd;
         img {
           @include height(12.5px);
           margin-right: 4px;
@@ -324,13 +338,10 @@ header {
   }
 }
 
-.nav-option,
-.more-options-container img,
 button,
 .left-button,
 .right-button,
-.language-select,
-.sign-in-container,
+.option,
 a :hover {
   cursor: pointer;
 }
@@ -349,6 +360,11 @@ a :hover {
         display: flex;
         align-items: center;
 
+        button {
+          border: none;
+          background-color: #ffffff;
+        }
+
         .sort-blog {
           font-size: 11px;
           font-weight: 700;
@@ -358,7 +374,7 @@ a :hover {
 
         .selected-option {
           margin-bottom: 1px;
-          padding: 8px 31px 6px 26px;
+          padding: 9px 31px 7px 26px;
           color: #4455b7;
           border-radius: 20px;
           font-size: 11px;
@@ -368,7 +384,7 @@ a :hover {
 
         .other-options {
           margin-bottom: 1px;
-          padding: 8px 29px 6px 26px;
+          padding: 10px 30px 9px 29px;
           border-radius: 20px;
           font-size: 11px;
           background-color: #f5f5f5;
@@ -444,6 +460,7 @@ a :hover {
 
         .text-container {
           margin-left: 20px;
+          margin-right: 20px;
           margin-top: 10px;
 
           .bold-text {
@@ -867,6 +884,10 @@ a :hover {
               color: white;
               top: 5px;
               left: 230px;
+
+              &:hover {
+                cursor: pointer;
+              }
             }
           }
 
@@ -1033,6 +1054,10 @@ a :hover {
               // content: "POPULAR POST";
               // color: #3f51b5;
               display: flex;
+
+              &:hover {
+                cursor: pointer;
+              }
             }
 
             .button-container::before {
@@ -1072,9 +1097,11 @@ a :hover {
                 width: 270px;
                 display: flex;
                 margin-bottom: 32px;
+                font-family: "Open Sans", sans-serif;
 
                 .user-img {
                   margin-right: 15px;
+                  min-width: 100px;
                 }
 
                 .text-container {
@@ -1082,14 +1109,17 @@ a :hover {
                     display: flex;
                     justify-content: space-between;
                     font-size: 12px;
+                    line-height: 0.75;
+                    margin-bottom: 5px;
 
                     .msg {
                       display: flex;
 
                       .icon {
-                        font-size: 16px;
+                        font-size: 14px;
                         margin-right: 5px;
                         color: #3f51b5;
+                        line-height: 7px;
                       }
 
                       .text {
@@ -1119,13 +1149,13 @@ a :hover {
                 margin-bottom: 26px;
               }
 
-              .individual-tags-container{
+              .individual-tags-container {
                 display: flex;
                 flex-wrap: wrap;
                 width: 270px;
                 justify-content: flex-start;
 
-                .individual-tag{
+                .individual-tag {
                   margin-right: 10px;
                   background-color: #ededed;
                   width: fit-content;
@@ -1182,7 +1212,11 @@ a :hover {
     justify-content: center;
     position: relative;
 
-    .text-container{
+    img{
+      width: 100vw;
+    }
+
+    .text-container {
       position: absolute;
       display: flex;
       justify-content: space-between;
@@ -1191,7 +1225,7 @@ a :hover {
       height: 199px;
       width: 1170px;
 
-      .text{
+      .text {
         color: white;
         font-size: 45px;
         font-weight: 800;
@@ -1199,7 +1233,7 @@ a :hover {
         letter-spacing: 1px;
       }
 
-      input{
+      input {
         width: 270px;
         height: 45px;
         background-color: transparent;
@@ -1213,7 +1247,7 @@ a :hover {
         margin-top: 2px;
       }
 
-      button{
+      button {
         width: 170px;
         height: 45px;
         color: white;
